1012 CMV Change Tile Render deserilization bug

--- a/src/service/Megalodon/MegalodonSvc/TagfileSvc.csproj
+++ b/src/service/Megalodon/MegalodonSvc/TagfileSvc.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <Compile Include="Documentation\Installation.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
 
@@ -37,6 +37,9 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Documentation\UpdateHistory.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
