--- a/src/service/Project/test/UnitTests/MasterDataProjectTests/VSS.Project.WebApi.Tests.csproj
+++ b/src/service/Project/test/UnitTests/MasterDataProjectTests/VSS.Project.WebApi.Tests.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="coverlet.msbuild" Version="1.2.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
   </ItemGroup>
 
   <ItemGroup>
