--- a/src/service/TagFileGateway/deploy/templates/webapiservice.yaml
+++ b/src/service/TagFileGateway/deploy/templates/webapiservice.yaml
@@ -1,4 +1,4 @@
-{{- $name := printf "%s-%s-%s" .Release.Name .Values.environment .Values.image.tag | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
+{{- $name := printf "%s-%s" .Release.Name .Values.environment | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
 kind: Service
 apiVersion: v1
 metadata:
