--- a/src/service/Project/deploy/templates/configmap.yaml
+++ b/src/service/Project/deploy/templates/configmap.yaml
@@ -1,13 +1,12 @@
 {{- $filename := printf "%s.txt" .Values.environment -}}
-{{- $configName := printf "%s-cfg-%s-%s" .Release.Name .Values.environment .Values.image.tag | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
-{{- $name :=       printf "%s-%s-%s" .Release.Name .Values.environment .Values.image.tag | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
+{{- $configName := printf "%s-cfg-%s" .Release.Name .Values.environment | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ $configName }}
   labels:
-    app: {{ $name }}
-    release: "{{ $name }}"
+    app: {{ template "projectservice.name" . }}
+    release: {{ template "projectservice.name" . }}
 data:
   {{ range .Files.Lines $filename }}
   {{ . }}{{ end }}
