--- a/src/service/Project/deploy/templates/webapiservice.yaml
+++ b/src/service/Project/deploy/templates/webapiservice.yaml
@@ -1,14 +1,15 @@
-{{- $name := printf "%s-%s-%s" .Release.Name .Values.environment .Values.image.tag | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ $name }}
+  name: {{ template "projectservice.name" . }}
   labels:
     service-name: {{ .Values.serviceName }}
+    app: {{ template "projectservice.name" . }}  
   annotations:
     prometheus.io/scrape: "true"
 spec:
   selector:
+    app: {{ template "projectservice.name" . }}
     component: {{ template "component.webapi" . }}
   ports:
   - protocol: TCP
