--- a/src/service/TagFileGateway/deploy/templates/webapideployment.yaml
+++ b/src/service/TagFileGateway/deploy/templates/webapideployment.yaml
@@ -1,25 +1,24 @@
-{{- $name := printf "%s-%s" .Release.Name .Values.environment | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
-{{- $configName := printf "%s-config-%s" .Release.Name .Values.environment | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
+{{- $configName := printf "%s-cfg-%s" .Release.Name .Values.environment | lower | replace "_" "-" | trunc 63 | trimSuffix "-" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ $name }}
+  name: {{ template "TagFileGatewayservice.name" . }}
   labels:
-    app: {{ $name }}
+    app: {{ template "TagFileGatewayservice.name" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ $name }}
+      app: {{ template "TagFileGatewayservice.name" . }}
   template:
     metadata:
       labels:
-        app: {{ $name }}
+        app: {{ template "TagFileGatewayservice.name" . }}
     spec:
       serviceAccount: {{ .Values.environment }}-service-account  
       containers:
       - image: 940327799086.dkr.ecr.us-west-2.amazonaws.com/rpd-ccss-tagfilegateway-webapi:{{ .Values.image.tag }}
-        name: {{ $name }}    
+        name: {{ template "TagFileGatewayservice.name" . }}    
         resources:
 {{ toYaml .Values.resources | indent 12 }}
         envFrom:
