--- a/src/service/TRex/src/netstandard/VSS.TRex.Rendering.Implementations.Core2/VSS.TRex.Rendering.Implementations.Core2.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.Rendering.Implementations.Core2/VSS.TRex.Rendering.Implementations.Core2.csproj
@@ -11,6 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="2.80.1" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.80.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
