--- a/src/service/TRex/deploy/templates/tile/tile-server-deployment.yaml
+++ b/src/service/TRex/deploy/templates/tile/tile-server-deployment.yaml
@@ -75,5 +75,7 @@ spec:
             value: {{ .Values.environment }}
           - name: TREX_IGNITE_JVM_MAX_HEAP_SIZE_MB
             value: {{ .Values.tileServer.javaHeapMaxSizeMb | quote }}
+          - name: COMPlus_legacyCorruptedStateExceptionsPolicy
+            value: "1"
           - name: TREX_IGNITE_JVM_INITIAL_HEAP_SIZE_MB
             value: {{ .Values.tileServer.javaHeapInitialSizeMb | quote }}  
