CCSSSCON-1067 Must set StartUTC for filter validation. Use TRex value for beginning of time.

--- a/src/service/3DP/src/Common/VSS.Productivity3D.Common.csproj
+++ b/src/service/3DP/src/Common/VSS.Productivity3D.Common.csproj
@@ -51,6 +51,7 @@
     <ProjectReference Include="..\..\..\..\Common\WebApi.Common\src\VSS.WebApi.Common.csproj" />
     <ProjectReference Include="..\..\..\Project\Clients\VSS.Productivity3D.Project.Abstractions\VSS.Productivity3D.Project.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\TRex\src\interfaces\VSS.TRex.Gateway.Common.Proxy\VSS.TRex.Gateway.Common.Proxy.csproj" />
+    <ProjectReference Include="..\..\..\TRex\src\netstandard\VSS.TRex.Common\VSS.TRex.Common.csproj" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
