Update logging to allow on the fly updates

--- a/src/service/TRex/src/netstandard/VSS.TRex.Logging/VSS.TRex.Logging.csproj
+++ b/src/service/TRex/src/netstandard/VSS.TRex.Logging/VSS.TRex.Logging.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Common\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
