Minor changes to TFA and Project svc appsettings and launchSettings to better facilitate concurrent service execution when using service discovery and Alpha services.

--- a/src/service/Project/src/ProjectWebApi/appsettings.Alpha.json
+++ b/src/service/Project/src/ProjectWebApi/appsettings.Alpha.json
@@ -8,6 +8,7 @@
   // MySql configuration",
   "MYSQL_SERVER_NAME_VSPDB": "rds-rpd-mydb04.cfyg2f3omhgy.us-west-2.rds.amazonaws.com",
   "MYSQL_PORT": "3306",
+  "MYSQL_DATABASE_NAME": "Alpha-Project",
   "MYSQL_USERNAME": "[TESTING ONLY]",
   "MYSQL_ROOT_PASSWORD": "[TESTING ONLY]",
   "MYSQL_USERNAME_BUILD": "[TESTING ONLY]",
