--- a/src/service/TRex/deploy/templates/design-elevation/design-elevation-server.yaml
+++ b/src/service/TRex/deploy/templates/design-elevation/design-elevation-server.yaml
@@ -41,7 +41,7 @@ spec:
         # Ignite Docker image. Kubernetes IP finder is supported starting from
         # Apache Ignite 2.3.0
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.DesignElevation
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
 
         resources:
 {{ toYaml .Values.designElevation.resources | indent 10 }}
