--- a/src/service/TRex/deploy/templates/gateway/gateway-server-deployment.yaml
+++ b/src/service/TRex/deploy/templates/gateway/gateway-server-deployment.yaml
@@ -37,7 +37,7 @@ spec:
         # Ignite Docker image. Kubernetes IP finder is supported starting from
         # Apache Ignite 2.3.0
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.Gateway
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         envFrom:
         - configMapRef:
             name: {{ template "trex.config" . }}        
