--- a/src/service/TRex/deploy/templates/mutable-data/mutable-data-statefulset.yaml
+++ b/src/service/TRex/deploy/templates/mutable-data/mutable-data-statefulset.yaml
@@ -47,7 +47,7 @@ spec:
         # Ignite Docker image. Kubernetes IP finder is supported starting from
         # Apache Ignite 2.3.0
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.MutableData
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         
         resources:
 {{ toYaml .Values.mutableData.resources | indent 10 }}
