--- a/src/service/TRex/deploy/templates/psnode/psnode-statefulset.yaml
+++ b/src/service/TRex/deploy/templates/psnode/psnode-statefulset.yaml
@@ -43,7 +43,7 @@ spec:
         # Custom Ignite pod name.
       - name: ignite-node
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.PSNode
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         
         resources:
 {{ toYaml .Values.psnode.resources | indent 10 }}
