--- a/src/service/TRex/deploy/templates/tile/tile-server-deployment.yaml
+++ b/src/service/TRex/deploy/templates/tile/tile-server-deployment.yaml
@@ -39,7 +39,7 @@ spec:
         # Ignite Docker image. Kubernetes IP finder is supported starting from
         # Apache Ignite 2.3.0
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}.TileRendering
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
 
         resources:
 {{ toYaml .Values.tileServer.resources | indent 10 }}
