--- a/src/service/TRex/deploy/values.yaml
+++ b/src/service/TRex/deploy/values.yaml
@@ -10,6 +10,7 @@ serviceAccountName: trex
 image:
   repository: "940327799086.dkr.ecr.us-west-2.amazonaws.com/rpd-ccss-trex"
   tag: latest
+  pullPolicy: Always
 
 ingress:
   enabled: true
@@ -51,7 +52,7 @@ designElevation:
       cpu: 300m
       memory: 2Gi
   autoscaling:
-    enabled: true
+    enabled: false
     minReplicas: 1
     maxReplicas: 2
     memory:
@@ -70,15 +71,6 @@ gateway:
     requests:
       cpu: 300m
       memory: 1280Mi
-
-immutableData:
-  replicaCount: 1
-  javaHeapMaxSizeMb: 1024
-  javaHeapInitialSizeMb: 768  
-  resources: 
-    requests:
-      cpu: 300m
-      memory: 1536Mi
 
 mutableData:
   replicaCount: 1
