Updated BaseProxy to not worry about the IHttpClientFactory, deferring ownership to the IWebRequest service.

--- a/src/service/Project/src/ProjectWebApi/appsettings.localhost.json
+++ b/src/service/Project/src/ProjectWebApi/appsettings.localhost.json
@@ -16,6 +16,7 @@
   "cws_devicegateway_public_v2": "http://localhost:5001/api/v2",
   "trex_mutable_service_public_v1": "https://api-stg.trimble.com/t/trimble.com/vss-dev-TRex/1.0/design",
   "filter_service_public_v1": "http://localhost:5001/api/v1",
+  "scheduler-service_private_v1": "http://localhost:5001/internal/v1",
   "TCCBASEURL": "http://localhost:5001",
   "TCCORG": "vldev",
   "TCCUSERNAME": "vldev",
@@ -40,10 +41,10 @@
   "NOTIFICATION_HUB_URL": "",
   "PUSH_NO_AUTHENTICATION_HEADER": "true",
   // CWS
-  "MOCK_CWS_ACCOUNT": "false",
-  "MOCK_CWS_DESIGN": "false",
-  "MOCK_CWS_DEVICE": "false",
-  "MOCK_CWS_PROFILE": "false",
-  "MOCK_CWS_PROJECT": "false",
-  "MOCK_CWS_USER": "false"
+  "MOCK_CWS_ACCOUNT": "true",
+  "MOCK_CWS_DESIGN": "true",
+  "MOCK_CWS_DEVICE": "true",
+  "MOCK_CWS_PROFILE": "true",
+  "MOCK_CWS_PROJECT": "true",
+  "MOCK_CWS_USER": "true"
 }
