--- a/src/service/Project/src/ProjectWebApi/appsettings.localhost.json
+++ b/src/service/Project/src/ProjectWebApi/appsettings.localhost.json
@@ -41,10 +41,10 @@
   "NOTIFICATION_HUB_URL": "",
   "PUSH_NO_AUTHENTICATION_HEADER": "true",
   // CWS
-  "MOCK_CWS_ACCOUNT": "true",
-  "MOCK_CWS_DESIGN": "true",
-  "MOCK_CWS_DEVICE": "true",
-  "MOCK_CWS_PROFILE": "true",
-  "MOCK_CWS_PROJECT": "true",
-  "MOCK_CWS_USER": "true"
+  "MOCK_CWS_ACCOUNT": "false",
+  "MOCK_CWS_DESIGN": "false",
+  "MOCK_CWS_DEVICE": "false",
+  "MOCK_CWS_PROFILE": "false",
+  "MOCK_CWS_PROJECT": "false",
+  "MOCK_CWS_USER": "false"
 }
