--- a/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
+++ b/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
@@ -74,6 +74,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
+    <PackageReference Include="OpenCover" Version="4.7.922" />
     <PackageReference Include="coverlet.msbuild" Version="2.8.1" />
     <!-- END -->
   </ItemGroup>
