--- a/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
+++ b/src/service/3DP/test/UnitTests/WebApiTests/VSS.Productivity3D.WebApi.Tests.csproj
@@ -75,7 +75,10 @@
     <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
     <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
     <PackageReference Include="OpenCover" Version="4.7.922" />
-    <PackageReference Include="coverlet.msbuild" Version="2.8.1" />
+    <PackageReference Include="coverlet.msbuild" Version="1.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <!-- END -->
   </ItemGroup>
 
