--- a/src/service/Megalodon/test/UnitTests/UnitTests.csproj
+++ b/src/service/Megalodon/test/UnitTests/UnitTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="2.8.1" />
+    <PackageReference Include="Moq" Version="4.14.5" />
     <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
