Restructure Megalodon folder layout; create new Solution file.

--- a/src/service/Megalodon/src/TagFiles/TagFiles.csproj
+++ b/src/service/Megalodon/src/TagFiles/TagFiles.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Common\WebApi.Common\src\VSS.WebApi.Common.csproj" />
+    <ProjectReference Include="..\..\..\..\Common\VSS.Common.Abstractions\src\VSS.Common.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
