--- a/src/service/Megalodon/test/UnitTests/UnitTests.csproj
+++ b/src/service/Megalodon/test/UnitTests/UnitTests.csproj
@@ -2,8 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,8 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Common\WebApi.Common\src\VSS.WebApi.Common.csproj" />
-    <ProjectReference Include="..\..\TagFiles\TagFiles.csproj" />
+    <ProjectReference Include="..\..\src\TagFiles\TagFiles.csproj" />
   </ItemGroup>
 
 </Project>
