Updated 3dNow unit tests to generate 'some' coverage results.

--- a/src/service/3dNow/test/VSS.Productivity3D.3DNow.UnitTests/VSS.Productivity3D.3DNow.UnitTests.csproj
+++ b/src/service/3dNow/test/VSS.Productivity3D.3DNow.UnitTests/VSS.Productivity3D.3DNow.UnitTests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" /> 
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Service\VSS.Productivity3D.3DNow\VSS.Productivity3D.Now3D.csproj" />
+  </ItemGroup>
+
 </Project>
